# DataTeamAnalytics

./: .replit  Dockerfile  Dockerfile.ubuntu  README.md  ai_assistant.py  app.py  db_analyzer.py  docker-compose.yml  pyproject.toml  sql_server_connection.py  uml_generator.py  utils.py  visualization.py
download/: Dockerfile  Dockerfile.minimal  README.md  data_processor.py  db_schema_extractor.py  dependencies_list.txt  ef_code_generator.py  install.py  sql_uml_app.py
